--- a/Description
+++ b/Description
@@ -2,6 +2,7 @@ World of Tanks
 Keywords: Strategy , Brawler, 3D, Multiplayer, Time-Based
 Platforms: PC 
 Deadline: TO_DO
+De facut un fel de impartire a task-urilor: --))
 Game Description: 
 Harta cu maximum 40 playeri alesi in mod random. Fiecarui player ii este asociat un set minim de abilitati, bani si HP 
 a) cu banii la inceput/ pe parcursul jocului 
